
Fri Jun 16 17:00:04 EDT 1995	Paul Park	(pjpark@mit.edu)
	* k4_glue.c - Add this module with the "req_act_vno" symbol definition
		so that we can use old versions of K4.
	* configure.in - Check for #pragma weak.
	* Makefile.in - Add k4_glue.c, Add K4 to include list.

Fri Jun 16 11:15:11 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add install target for shared library.


Thu Jun 15 18:00:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change "./DONE" target to "DONE" since we have a rule
		for how to build it.  Also add definitions for shared library
		building rules.
	* configure.in - Create symlinks for archive and shared library when
		we build them.

Wed Jun 14 07:37:26 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (libdes425.a): Don't copy library up a level. Let
		above Makefile symlink to it.

Fri Jun  9 19:18:59 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu Jun  8 23:24:20 1995    <tytso@rsx-11.mit.edu>

	* read_passwd.c (des_read_pw_string): Don't depend on
		krb5_read_password(); this created a circular dependency
		in the libraries.  This code is now duplicated in
		des_read_pw_string.

	* util.c (des_cblock_print_file): Fix -Wall nit.

Mon Jun  5 21:02:37 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* quad_cksum: Convert longs to KRB_INT32 for 64 bit platforms.

Fri May 26 21:43:52 1995  Theodore Y. Ts'o  (tytso@dcl)

	* util.c: Added new function, des_cblock_print_file(), which is
		referenced by libkrb4.a.  (Even though it's never used,
		some OS's demand that all of the references in a
		shared library have to be resolved.)

Mon May  1 11:29:37 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* read_passwd.c: (des_read_pw_string): Call to krb5_read_password
		wants a pointer to the length of the buffer.

Fri Apr 28 13:35:25 1995  Theodore Y. Ts'o  <tytso@dcl>
