@@ -20,9 +20,6 @@ fi
 dnl
 V5_SHARED_LIB_OBJS
 SubdirLibraryRule([${OBJS}])
-LinkFileDir(../libdes425.a, libdes425.a, ./des425)
-AppendRule([all:: libdes425.a])
-AppendRule([all-unix:: ../libdes425.a])
 V5_MAKE_SHARED_LIB(libdes425)
 AC_ARG_ENABLE([shared],
 [  --enable-shared         build shared libraries],[
@@ -32,4 +29,11 @@ AppendRule([install::	libdes425.[$](SHEXT)
 	[$](INSTALL_DATA) libdes425.[$](SHEXT)	\
 		[$](DESTDIR)[$](KRB5_SHLIBDIR)[$](S)libdes425.[$](SHEXT)])
 ])dnl
+if test -n "$krb5_cv_staticlibs_enabled" ; then
+	LinkFileDir(../libdes425.[$](STEXT), libdes425.[$](STEXT), ./krb5)
+        AppendRule([install:: 
+	[$](INSTALL_DATA) libdes425.[$](STEXT) [$](DESTDIR)[$](KRB5_LIBDIR)/libdes425.[$](STEXT)
+	[$](RANLIB) [$](DESTDIR)[$](KRB5_LIBDIR)/libdes425.[$](STEXT)]) 
+	AppendRule([all-unix:: ../libdes425.[$](STEXT)])
+fi
 V5_AC_OUTPUT_MAKEFILE
