@@ -46,8 +46,6 @@ V5_SHARED_LIB_OBJS
 SubdirLibraryRule([$(OBJS)])
 V5_MAKE_SHARED_LIB(libkrb4)
 CopyHeader(krb_err.h,$(EHDRDIR))
-LinkFileDir(../libkrb4.a, libkrb4.a, ./krb4)
-AppendRule([all-unix:: ../libkrb4.a])
 AC_ARG_ENABLE([shared],
 [  --enable-shared         build shared libraries],[
 LinkFileDir(../libkrb4.[$](SHEXT), libkrb4.[$](SHEXT), ./krb4)
@@ -56,4 +54,11 @@ AppendRule([install::	libkrb4.[$](SHEXT)
 	[$](INSTALL_DATA) libkrb4.[$](SHEXT)	\
 		[$](DESTDIR)[$](KRB5_SHLIBDIR)[$](S)libkrb4.[$](SHEXT)])
 ])dnl
+if test -n "$krb5_cv_staticlibs_enabled" ; then
+	LinkFileDir(../libkrb4.[$](STEXT), libkrb4.[$](STEXT), ./krb5)
+        AppendRule([install:: 
+	[$](INSTALL_DATA) libkrb4.[$](STEXT) [$](DESTDIR)[$](KRB5_LIBDIR)/libkrb4.[$](STEXT)
+	[$](RANLIB) [$](DESTDIR)[$](KRB5_LIBDIR)/libkrb4.[$](STEXT)]) 
+	AppendRule([all-unix:: ../libkrb4.[$](STEXT)])
+fi
 V5_AC_OUTPUT_MAKEFILE
